@@ -1,15 +1,12 @@
 package uy.volando.web;
 
 import java.io.IOException;
+import java.lang.reflect.Method;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import Logica.DataAerolinea;
-import Logica.DataCliente;
-import Logica.DataReserva;
-import Logica.DataRuta;
-import Logica.DataVueloEspecifico;
-import Logica.EstadoRuta;
-import Logica.ISistema;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
@@ -17,21 +14,39 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 
+import uy.volando.publicar.DataAerolinea;
+import uy.volando.publicar.DataAerolineaArray;
+import uy.volando.publicar.DataCliente;
+import uy.volando.publicar.DataReserva;
+import uy.volando.publicar.DataRuta;
+import uy.volando.publicar.DataVueloEspecifico;
+import uy.volando.publicar.WebServices;
+
 /**
  * Servlet implementation class consultaVuelo.
  */
 @WebServlet("/consultaVuelo")
 public class consultaVuelo extends HttpServlet {
-  public static final long serialVersionUID = 1L;
+  private static final long serialVersionUID = 1L;
+
+  private WebServices port;
 
   public consultaVuelo() {
     super();
   }
 
   @Override
+  public void init() throws ServletException {
+      super.init();
+      this.port = (WebServices) getServletContext().getAttribute("volandoPort");
+      if (this.port == null) {
+          throw new ServletException("El cliente SOAP (WebServices) no fue inicializado por InicioServlet.");
+      }
+  }
+
+  @Override
   protected void doGet(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
-    ISistema sistema = (ISistema) getServletContext().getAttribute("sistema");
 
     // Usuario
     HttpSession session = req.getSession();
@@ -39,7 +54,7 @@ public class consultaVuelo extends HttpServlet {
     req.setAttribute("usuario", usuario);
 
     // Aerolíneas
-    List<DataAerolinea> aerolineas = sistema.listarAerolineas();
+    List<?> aerolineas = unwrapList(port.listarAerolineas());
     req.setAttribute("aerolineas", aerolineas);
 
     // Parametros
@@ -50,9 +65,22 @@ public class consultaVuelo extends HttpServlet {
     // Rutas confirmadas para la aerolínea (si hay aerolínea)
     List<DataRuta> rutasConfirmadas = null;
     if (nicknameAerolinea != null && !nicknameAerolinea.isBlank()) {
-      List<DataRuta> rutas = sistema.listarPorAerolinea(nicknameAerolinea);
-      rutasConfirmadas = rutas.stream().filter(r -> r.getEstado() == EstadoRuta.CONFIRMADA)
-          .toList();
+      List<?> rutasWrapper = unwrapList(port.listarPorAerolinea(nicknameAerolinea));
+      List<DataRuta> rutas = rutasWrapper.stream()
+          .map(o -> (DataRuta) o)
+          .collect(Collectors.toList());
+
+      rutasConfirmadas = rutas.stream()
+          .filter(r -> {
+            try {
+              Object estado = r.getEstado();
+              return estado != null && "CONFIRMADA".equalsIgnoreCase(estado.toString());
+            } catch (Exception e) {
+              return false;
+            }
+          })
+          .collect(Collectors.toList());
+
       req.setAttribute("rutas", rutasConfirmadas);
     }
 
@@ -61,7 +89,13 @@ public class consultaVuelo extends HttpServlet {
         && !nombreRuta.isBlank()) {
 
       boolean rutaPertenece = (rutasConfirmadas != null)
-          && rutasConfirmadas.stream().anyMatch(r -> r.getNombre().equals(nombreRuta));
+          && rutasConfirmadas.stream().anyMatch(r -> {
+            try {
+              return nombreRuta.equals(r.getNombre());
+            } catch (Exception e) {
+              return false;
+            }
+          });
 
       if (!rutaPertenece) {
         // hacemos el flash error
@@ -77,7 +111,10 @@ public class consultaVuelo extends HttpServlet {
     if (nicknameAerolinea != null && !nicknameAerolinea.isBlank() && nombreRuta != null
         && !nombreRuta.isBlank()) {
 
-      List<DataVueloEspecifico> vuelos = sistema.listarVuelos(nicknameAerolinea, nombreRuta);
+      List<?> vuelosWrapper = unwrapList(port.listarVuelos(nicknameAerolinea, nombreRuta));
+      List<DataVueloEspecifico> vuelos = vuelosWrapper.stream()
+          .map(o -> (DataVueloEspecifico) o)
+          .collect(Collectors.toList());
       req.setAttribute("vuelos", vuelos);
     }
 
@@ -85,7 +122,7 @@ public class consultaVuelo extends HttpServlet {
     if (nicknameAerolinea != null && !nicknameAerolinea.isBlank() && nombreRuta != null
         && !nombreRuta.isBlank() && codigoVuelo != null && !codigoVuelo.isBlank()) {
 
-      DataVueloEspecifico vuelo = sistema.buscarVuelo(nicknameAerolinea, nombreRuta, codigoVuelo);
+      DataVueloEspecifico vuelo = port.buscarVuelo(nicknameAerolinea, nombreRuta, codigoVuelo);
 
       if (vuelo == null) {
         // Vuelo no pertenece a esa aerolínea/ruta → flash + redirect dejando filtros
@@ -112,16 +149,22 @@ public class consultaVuelo extends HttpServlet {
           esCliente = true;
         }
 
-        if (esAerolinea && vuelo.getDRuta() != null && usuarioNickname != null
-            && usuarioNickname.equals(vuelo.getDRuta().getNicknameAerolinea())) {
+        if (esAerolinea && vuelo.getDruta() != null && usuarioNickname != null
+            && usuarioNickname.equals(vuelo.getDruta().getNicknameAerolinea())) {
 
-          List<DataReserva> reservas = sistema.listarReservas(nicknameAerolinea, nombreRuta,
-              codigoVuelo);
+          List<?> reservasWrapper = unwrapList(port.listarReservas(nicknameAerolinea, nombreRuta,
+              codigoVuelo));
+          List<DataReserva> reservas = reservasWrapper.stream()
+              .map(o -> (DataReserva) o)
+              .collect(Collectors.toList());
           req.setAttribute("reservasVuelo", reservas);
 
         } else if (esCliente && usuarioNickname != null) {
-          List<DataReserva> reservas = sistema.listarReservas(nicknameAerolinea, nombreRuta,
-              codigoVuelo);
+          List<?> reservasWrapper = unwrapList(port.listarReservas(nicknameAerolinea, nombreRuta,
+              codigoVuelo));
+          List<DataReserva> reservas = reservasWrapper.stream()
+              .map(o -> (DataReserva) o)
+              .collect(Collectors.toList());
           for (DataReserva r : reservas) {
             if (r.getNickCliente() != null
                 && usuarioNickname.equals(r.getNickCliente().getNickname())) {
@@ -136,7 +179,7 @@ public class consultaVuelo extends HttpServlet {
       if (idReserva != null && !idReserva.isBlank()) {
         try {
           int idRes = Integer.parseInt(idReserva);
-          DataReserva detalleReserva = sistema.buscarReserva(nicknameAerolinea, nombreRuta,
+          DataReserva detalleReserva = port.buscarReserva(nicknameAerolinea, nombreRuta,
               codigoVuelo, idRes);
           req.setAttribute("detalleReserva", detalleReserva);
         } catch (NumberFormatException ignored) {
@@ -148,7 +191,31 @@ public class consultaVuelo extends HttpServlet {
     req.getRequestDispatcher("/WEB-INF/vuelo/consultaVuelo.jsp").forward(req, resp);
   }
 
-  @Override
+  private List<?> unwrapList(Object wrapper) {
+    if (wrapper == null) {
+      return Collections.emptyList();
+    }
+    try {
+      // método más común generado por wsimport
+      Method m = wrapper.getClass().getMethod("getItem");
+      Object r = m.invoke(wrapper);
+      if (r instanceof List) return (List<?>) r;
+    } catch (Exception ignored) {
+    }
+    try {
+      // buscar cualquier getter que devuelva una List
+      for (Method mm : wrapper.getClass().getMethods()) {
+        if (mm.getParameterCount() == 0 && List.class.isAssignableFrom(mm.getReturnType())) {
+          Object r = mm.invoke(wrapper);
+          if (r instanceof List) return (List<?>) r;
+        }
+      }
+    } catch (Exception ignored) {
+    }
+    return Collections.emptyList();
+  }
+
+    @Override
   protected void doPost(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
     // No se usa en este caso de uso
